--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -20,7 +20,19 @@
 }
 
 .form__inputs{
-    height: 335px;
+    height: 275px;
+}
+
+.form__error-message {
+    max-width: 100%;
+    min-height: 40px;
+    text-align: center;
+    color: #EE3465;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 0;
+    margin: 10px 0;
 }
 
 .form__button{
@@ -89,7 +101,7 @@
     }
 
     .form__inputs{
-        height: 423px;
+        height: 363px;
     }
 
     .form__button{
