--- a/src/components/Register/Register.css
+++ b/src/components/Register/Register.css
@@ -14,7 +14,6 @@
 .register__input{
     border: none;
     border-bottom: 1px solid #E8E8E8;
-    margin-bottom: 24px;
     font-weight: 400;
     font-size: 14px;
     line-height: 17px;
@@ -26,4 +25,17 @@
     font-weight: 500;
     outline: none;
     border-bottom: 2px solid #3456F3;
+}
+
+.register__input-error {
+    color: #EE3465;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+    margin: 6px 6px;
+    max-width: 358px;
+    display: block;
+    min-height: 12px;
 }
