--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -51,18 +51,17 @@
     cursor: pointer;
 }
 
-.error-message {
-    display: inline-block;
-    font-size: 11px;
-    line-height: 13px;
-    color: #ff004c;
-    text-align: center;
-    height: 13px;
-    opacity: 0;
-}
-
-.error-message_visible {
-    opacity: 1;
+.search__input-error {
+    color: #EE3465;
+    font-family: 'Inter';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 10px;
+    line-height: 12px;
+    margin: 6px 6px;
+    max-width: 358px;
+    display: block;
+    min-height: 12px;
 }
 
 @media screen and (max-width: 1020px){
