--- a/src/components/Form/Form.css
+++ b/src/components/Form/Form.css
@@ -73,6 +73,8 @@
     margin-left: 6px;
     color: #3456F3;
     text-decoration: none;
+    border: none;
+    background: none;
 }
 
 .form__link:hover{
