--- a/src/components/SearchForm/SearchForm.css
+++ b/src/components/SearchForm/SearchForm.css
@@ -64,6 +64,10 @@
     min-height: 12px;
 }
 
+.search__input-error_hidden {
+    display: none;
+}
+
 @media screen and (max-width: 1020px){
     .search-form{
         padding: 80px 30px 10px;
